# prompt-injection-honeypot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  ETHICS.md
samples/: payloads.md  sample_logs.jsonl
src/honeypot/: __init__.py  classifier.py  dashboard.py  py.typed  server.py  telemetry.py
tests/: test_classifier.py  test_server.py  test_telemetry.py
